@@ -21,17 +21,17 @@ jobs:
     - name: bootstrap
       run: ./bootstrap.sh
     - name: configure
-      run: ./configure --enable-warnings CXXFLAGS=-std=c++11
+      run: ./configure --enable-warnings CXXFLAGS=-std=c++17
     - name: make
       run: make
     - name: make check
       run: make check
     - name: make distcheck
-      run: make distcheck CXXFLAGS=-std=c++11
+      run: make distcheck CXXFLAGS=-std=c++17
     - name: build with hardened build flags
       run: |
         make clean
-        eval $(DEB_BUILD_MAINT_OPTIONS="hardening=+all qa=+all,-canary reproducible=+all" dpkg-buildflags --export=sh)
+        eval $(DEB_CXXFLAGS_APPEND=-std=c++17 DEB_BUILD_MAINT_OPTIONS="hardening=+all qa=+all,-canary reproducible=+all" dpkg-buildflags --export=sh)
         ./configure
         make
         make check
