@@ -60,11 +60,11 @@ AC_CHECK_FUNC(stat,,AC_MSG_ERROR(oops! no stat ?!?))
 dnl check for 64 bit support
 AC_SYS_LARGEFILE
 
-dnl make sure we have c++11 or better,
-AC_MSG_CHECKING([for C++11 support or better])
-AC_COMPILE_IFELSE([AC_LANG_PROGRAM([int f() { auto a=1;return a;}])],
+dnl make sure we have c++17 or better,
+AC_MSG_CHECKING([for C++17 support or better])
+AC_COMPILE_IFELSE([AC_LANG_PROGRAM([int f() { if constexpr(true) {auto a=1;return a;} else {return 2;}}])],
                   [AC_MSG_RESULT([yes])],
-		  [AC_MSG_ERROR([no c++11 support, please set CXXFLAGS properly])])
+		  [AC_MSG_ERROR([no c++17 support, please set CXXFLAGS properly])])
 
 AC_SUBST(VERSION)
 
